--- a/theory_part_1/1_object_scope.html
+++ b/theory_part_1/1_object_scope.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <title>Object & Scope | Alpine.js</title>
 </head>
-<body class="bg-gradient-to-b from-gray-100 to-gray-300 bg-no-repeat h-full relative">
+<body x-data="{bodyObj: 'body'}" class="bg-gradient-to-b from-gray-100 to-gray-300 bg-no-repeat h-full relative">
     <div class="container bg-gray-50 mx-auto shadow-sm p-4 min-h-screen relative">
         <div>
             <a class="absolute top-0 right-0 p-4 text-xl bg-yellow-200" href="./">One level up</a>
@@ -26,14 +26,18 @@
                     </p>
                     <p>
                         <h2>Output in the body</h2>
-                        bodyVar: <span>placeholder</span><br>
+                        bodyVar: <span x-text="bodyObj">placeholder</span><br>
                     </p>
             
-                    <div class="bg-blue-200 w-72 p-3 mb-6 rounded shadow">
-                        <b>This is Div 1</b><br><br>
+                    <div x-data="{div1obj: 'div1'}" class="bg-blue-200 w-72 p-3 mb-6 rounded shadow">
+                        <b>This is Div 1</b><br>
+                        <span x-text="div1obj"></span>
+                        <br>
                     </div>
                     <div class="bg-green-200 w-72 p-3 mb-6 rounded shadow">
-                        <b>This is Div 2</b><br><br>
+                        <b>This is Div 2</b><br>
+                        <span x-text="bodyObj"></span>
+                        <br>
                     </div>
                     <h3>Steps in this lecture</h3>
                     <ol>
