--- a/theory_part_1/2_x-bind.html
+++ b/theory_part_1/2_x-bind.html
@@ -22,18 +22,22 @@
                     <b>x-bind</b>: Sets value of HTML attribute, e.g. <i>value, style, class</i>  etc." 
                 </p>
                 <h2>x-bind (:)</h2>
+
                 <!-- Example 1 -->
                 <p class="text-lg"><b>Example 1:</b> Set value of input with object value</p>
-                <input class="border border-1 p-1 rounded shadow" value="" placeholder="some placeholder" type="text">
+                <input x-data="{ myVar: 'new text'}" class="border border-1 p-1 rounded shadow" :value="myVar" placeholder="some placeholder" type="text">
                 <span class="italic text-sm">Input value is bound to "myVar"</span>
                 <!-- Example 2 -->
+
                 <p class="text-lg mt-8"><b>Example 2:</b> Set style attribute</p>
-                <span>Some text</span><br>
+                <span x-data="{ myStyle : 'font-weight:700'}" :style="myStyle">Some text</span><br>
                 <span class="italic text-sm">font-weight is set by "myStyle"</span>
+
                 <!-- Example 3 -->
                 <p class="text-lg mt-8"><b>Example 3:</b> Set class attribute</p>
-                <div style="height: 4rem; width: 4rem; border: 1px solid black;"></div>
+                <div x-data="{ myClass : 'bg-blue-500'}" :class="myClass" style="height: 4rem; width: 4rem; border: 1px solid black;"></div>
                 <span class="italic text-sm">background-color is set by "myClass"</span>
+
             </div>
             <div id="right" class="lg:w-1/2">
                 <h3>Steps Example 1</h3>
