Source file x-model correction

--- a/theory_part_1/3_x-model.html
+++ b/theory_part_1/3_x-model.html
@@ -26,7 +26,7 @@
                 <!-- Example 1 -->
                 <p class="text-lg"><b>Example 1:</b>Text in Input element goes to output immediately</p>
                 <section>
-                    <input class="border border-1 p-1 rounded shadow" x-model="myInput" type="text">
+                    <input class="border border-1 p-1 rounded shadow" type="text">
                     <span>Output: </span>
                 </section>
 
