--- a/theory_part_1/5_x-on.html
+++ b/theory_part_1/5_x-on.html
@@ -20,34 +20,42 @@
                 <p id="new" class="bg-gray-200 p-2 rounded shadow text-lg">
                     NEW: @click, @click.away,
                 </p>
-                
+                <h2>x-on: Events can change an object</h2>
                 <!-- Example 1: @click -->
-                <h2>@click</h2>
-                <p class="text-lg"><b>Example 1:</b> Reset value of object on click</p>
-                <section>
-                    <input class="border border-1 p-1 rounded shadow" type="text">
-                    <span>Output</span>
-                    <span class="ml-2 bg-blue-200 p-2 rounded border border-1 cursor-pointer">Reset</span>
+                <h3>Example1: @click</h3>
+                <p class="text-lg">Reset value of object on click</p>
+                <section x-data="{myInput : ''}">
+                    <input x-model="myInput" class="border border-1 p-1 rounded shadow" type="text">
+                    <span x-text="'Output: ' + myInput">Output</span>
+                    <span @click="myInput = ''"
+                    class="ml-2 bg-blue-200 p-2 rounded border border-1 cursor-pointer">Reset</span>
                 </section>
 
                 <!-- Example 2: @mouseenter, @click.away -->
-                <h2 class="mt-8">@mouseenter, @click.away</h2>
-                <p class="text-lg"><b>Example 2:</b> Show Submenu and hide it on @click.away</p>
-                <section class="relative">
-                    <div id="button" class="bg-blue-200 hover:bg-blue-300 inline-block px-2 py-1 cursor-pointer">Open Menu</div>
-                    <div class="mt-2" id="submenu">
+                <h3 class="mt-8">Example2: @mouseenter, @click.away</h3>
+                <p class="text-lg">Show Submenu and hide it on @click.away</p>
+                <section x-data="{open : false}" class="relative">
+                    <div 
+                        @mouseenter="open = true"
+                        @click.away="open = false" 
+                        id="button" class="bg-blue-200 hover:bg-blue-300 inline-block px-2 py-1 cursor-pointer">Open Menu
+                    </div>
+                    <div x-show="open" class="mt-2" id="submenu">
                         <a target="_blank" class="px-2 py-1 inline-block w-32 cursor-pointer bg-blue-200 hover:bg-blue-300" href="https://www.google.com">Google</a><br>
                         <a target="_blank" class="px-2 py-1 inline-block w-32 cursor-pointer bg-blue-200 hover:bg-blue-300" href="https://www.amazon.com">Amazon</a><br>
                     </div>
                 </section>
 
                 <!-- Example 3: @keyup -->
-                <h2 class="mt-8">@keyup</h2>
-                <p class="text-lg"><b>Example 3:</b> Count characters in input</p>
-                <section>
-                    <input placeholder="Enter Username (max. 10 Char)" class="border border-1 p-1 w-60 rounded shadow" maxlength="10" type="text">
+                <h3 class="mt-8">Example3: @keyup + x-ref + $refs</h3>
+                <p class="text-lg">Count characters in input</p>
+                <section x-data="{remaining: 10}">
+                    <input
+                    x-ref="username"
+                    @keyup="remaining = 10-$refs.username.value.length"
+                    placeholder="Enter Username (max. 10 Char)" class="border border-1 p-1 w-60 rounded shadow" maxlength="10" type="text">
                     <br>
-                    <span></span>
+                    <span x-text="remaining + ' characters remaining'"></span>
                 </section>
 
             </div>
@@ -61,7 +69,7 @@
                 </ol>
                 <h3>Steps Example 2</h3>
                 <ol>
-                    <li>Give the section a <b>x-data="{open : false}</b></li>
+                    <li>Give the section a <b>x-data="{open : false}"</b></li>
                     <li>Make the div with the submenu dependent on the object <i>open</i>, by giving it <b>x-show="open"</b> </li>
                     <li>Give the <i>"button div"</i> an <b>@mouseenter="open = true"</b> to open submenu on mouseenter.</li>
                     <li>Give the <i>"button div"</i> an <b>@click.away="open = false"</b> to close submenu by clicking anywhere outside of the button.</li>
