Inserted Links to GitHub + minor HTML + CSS changes

--- a/theory_part_1/1_object_scope.html
+++ b/theory_part_1/1_object_scope.html
@@ -14,7 +14,12 @@
         <div>
             <a class="absolute top-0 right-0 p-4 text-xl bg-yellow-200" href="./">One level up</a>
         </div>
-        <h1>Object & Scope</h1>
+        <h1>
+            Object & Scope
+            <span class="text-base ml-4">
+            <a target="_blank" href="https://github.com/martin-masterclass/AlpineJS_Course/commit/df215af869d01f9d88b65375cc3c4fd86662824f">See lecture on GitHub</a>
+            </span>
+        </h1>
         <div class="flex flex-col lg:flex-row lg:gap-16">
             <div id="left" class="lg:w-1/2">
                 <p id="new" class="bg-gray-200 p-2 rounded shadow text-lg">
@@ -25,7 +30,7 @@
                     We will connect one object to the <b>body-tag</b>, and another one to <b>div1</b>.
                     </p>
                     <p>
-                        <h2>Output in the body</h2>
+                        <h2>Object and Scope: Where is your object visible?</h2>
                         bodyVar: <span x-text="bodyObj">placeholder</span><br>
                     </p>
             
@@ -50,7 +55,7 @@
                     </ol>
             </div>
             <div id="right" class="lg:w-1/2">
-                <h3>Things to remember:</h3>
+                <h3 class="mt-0">Things to remember:</h3>
                 <ul>
                     <li>As well as the definition, as the output of Objects are <b>bound to HTML-Elements</b> in Alpine.js</li>
                     <li>If a variable is <b>not set</b> you can use a <b>placeholder</b>.</li>
