--- a/theory_part_1/5_x-on.html
+++ b/theory_part_1/5_x-on.html
@@ -14,7 +14,12 @@
         <div>
             <a class="absolute top-0 right-0 p-4 text-xl bg-yellow-200" href="./">One level up</a>
         </div>
-        <h1>X-ON (@click etc.)</h1>
+        <h1>
+            X-ON (@click etc.)
+            <span class="text-base ml-4">
+                <a target="_blank" href="https://github.com/martin-masterclass/AlpineJS_Course/commit/0a3e1de17d8ce449157a39425fcf9eaeea27be60">See lecture on GitHub</a>
+            </span>
+        </h1>
         <div class="flex flex-col lg:flex-row lg:gap-16">
             <div id="left" class="lg:w-1/2">
                 <p id="new" class="bg-gray-200 p-2 rounded shadow text-lg">
@@ -60,7 +65,7 @@
 
             </div>
             <div id="right" class="mt-10 lg:mt-0 lg:w-1/2">
-                <h3>Steps Example 1</h3>
+                <h3 class="mt-0">Steps Example 1</h3>
                 <ol>
                     <li>Give the section a <b>x-data="{myInput : ''}"</b></li>
                     <li>Give the first <i>span</i> <b>x-text="'Output: ' + myInput"</b></li>
