very small corrections on Learning Part 1

--- a/theory_part_1/3_x-model.html
+++ b/theory_part_1/3_x-model.html
@@ -74,7 +74,7 @@
             <div id="right" class="mt-10 lg:mt-0 lg:w-1/2">
                 <h3 class="mt-0">Steps Example 1</h3>
                 <ol>
-                    <li>Give the section <b>x-data="{myInput : ''}</b></li>
+                    <li>Give the section <b>x-data="{myInput : ''}"</b></li>
                     <li>Give the span <b>x-text="'Output: ' + myInput"</b></li>
                     <li>Give the input <b>x-model="myInput"</b></li>
                 </ol>
