--- a/practice_part_1/1_practice_tabs.html
+++ b/practice_part_1/1_practice_tabs.html
@@ -17,7 +17,7 @@
         <h1>
             Alpine.js challenge: Simple Tabs
             <span class="text-base ml-4">
-                <a target="_blank" href="">See lecture on GitHub</a>
+                <a target="_blank" href="https://github.com/martin-masterclass/AlpineJS_Course/commit/c68329d18bdd33ecf5201a9a6883cc8e4b8bb0d9">See lecture on GitHub</a>
             </span>
         </h1>
         <div class="flex flex-col lg:flex-row lg:gap-16">
