--- a/practice_part_1/2_practice_calculator.html
+++ b/practice_part_1/2_practice_calculator.html
@@ -17,7 +17,7 @@
         <h1>
             Alpine.js challenge: Simple Calculator
             <span class="text-base ml-4">
-                <a target="_blank" href="">See lecture on GitHub</a>
+                <a target="_blank" href="https://github.com/martin-masterclass/AlpineJS_Course/commit/9cd56fd136e86df858b64abb3ea4c8af4c28ee72">See lecture on GitHub</a>
             </span>
         </h1>
         <div class="flex flex-col lg:flex-row lg:gap-16">
