--- a/practice_part_1/3_practice_colorslider.html
+++ b/practice_part_1/3_practice_colorslider.html
@@ -17,7 +17,7 @@
         <h1>
             Alpine.js challenge: Color Slider
             <span class="text-base ml-4">
-                <a target="_blank" href="">See lecture on GitHub</a>
+                <a target="_blank" href="https://github.com/martin-masterclass/AlpineJS_Course/commit/7e125ac2fae841db956bdd174251af7f0b8f647a">See lecture on GitHub</a>
             </span>
         </h1>
         <div class="flex flex-col lg:flex-row lg:gap-16">
