Components and parameters + external file example

--- a/theory_part_2/1_functions_components.html
+++ b/theory_part_2/1_functions_components.html
@@ -50,14 +50,19 @@
 
                 <script>
 
-                    function myComponent() {
+                    function myComponent(startName = '') {
                         return {
 
-                            myName: '',
+                            myName: startName,
 
                             hello() {
-                                alert('Hello!');
+                                alert('Hello ' + this.myName);
                             },
+
+                            hello_param(hello_name = '') {
+                                alert('Hello ' + hello_name);
+                            },
+                            
                             sayMyName() {
                                 if (this.myName != '') {
                                   alert('Are you ' + this.myName + '?');
@@ -76,10 +81,19 @@
                 <h3><b>Example 2:</b> Call a function on @click</h3>
                 <section>
                     <button
-                    x-data="myComponent()"
+                    x-data="myComponent('Tom')"
                     @click="hello()"
                     class="bg-gray-200 p-1 rounded hover:bg-gray-300 border border-1 border-gray-500">
                         Say Hello!
+                    </button>
+                </section>
+                <!-- Pass Param directly into method -->
+                <section>
+                    <button
+                    x-data="myComponent()"
+                    @click="hello_param('Alex')"
+                    class="bg-gray-200 p-1 rounded hover:bg-gray-300 border border-1 border-gray-500">
+                        Say Hello (with param)!
                     </button>
                 </section>
 
