--- a/theory_part_2/3_transitions_simple.html
+++ b/theory_part_2/3_transitions_simple.html
@@ -45,7 +45,7 @@
                      @click="visible = !visible"
                      class="px-2 py-1 mr-4 h-8 bg-gray-200 hover:bg-gray-300 mt-2 rounded focus:outline-none">Toggle visibility</button>
 
-                    <div x-show="visible" 
+                    <div x-show.transition.duration.300ms="visible" 
                     class="w-24 h-24 bg-yellow-500"></div>
                 </section>
 
